--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,43 @@ networks:
 services:
 
   spark:
-    image: apache/spark-py:v3.4.0
+    image: apache/spark:3.5.1-python3
     container_name: ${COMPOSE_PROJECT_NAME}.spark
-    restart: unless-stopped
+    command: bin/spark-class org.apache.spark.deploy.master.Master -h master
 
+    volumes:
+      - ./apps:/opt/spark/work-dir
     ports:
       - ${SPARK_PORT}:8080
+      - "7077:7077"
+      - "8081:8081"
+    environment:
+      - ENABLE_INIT_DAEMON=false
+      - "SPARK_MASTER_HOST=master"
+    depends_on:
+      - master
+    networks:
+      - data-net
+
+  master:
+    image: apache/spark:3.5.1-python3
+    container_name: ${COMPOSE_PROJECT_NAME}.master
+    command: bin/spark-class org.apache.spark.deploy.master.Master -h master
+    environment:
+      - ENABLE_INIT_DAEMON=false
+
     networks:
         - data-net
+
+
+  worker.1:
+    image: apache/spark:3.5.1-python3
+    container_name: ${COMPOSE_PROJECT_NAME}.worker.1
+    depends_on:
+      - master
+    environment:
+      - ENABLE_INIT_DAEMON=false
+    command: bin/spark-class org.apache.spark.deploy.worker.Worker spark://master:7077
+
+    networks:
+      - data-net
