--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,37 +17,38 @@ services:
       - ${SPARK_PORT}:8080
     environment:
       - ENABLE_INIT_DAEMON=false
-    depends_on:
-      - master
     networks:
       - data-net
 
 
-  master:
-    image: ${COMPOSE_PROJECT_NAME}-spark
-    container_name: ${COMPOSE_PROJECT_NAME}.master
-    command: sbin/start-master.sh
-    volumes:
-      - ./apps:/opt/spark/work-dir
-      - ./data:/opt/spark/data
-    environment:
-      - SPARK_NO_DAEMONIZE=true
 
-    networks:
-        - data-net
-
-
-  worker.1:
-    image: ${COMPOSE_PROJECT_NAME}-spark
-    container_name: ${COMPOSE_PROJECT_NAME}.worker.1
-    volumes:
-      - ./apps:/opt/spark/work-dir
-      - ./data:/opt/spark/data
-    depends_on:
-      - master
-    environment:
-      - SPARK_NO_DAEMONIZE=true
-      - "SPARK_MASTER_HOST=master"
-    command: sbin/start-worker.sh
-    networks:
-      - data-net
+# Dev Testing Spark container setup:
+#
+#  master:
+#    image: ${COMPOSE_PROJECT_NAME}-spark
+#    container_name: ${COMPOSE_PROJECT_NAME}.master
+#    command: sbin/start-master.sh
+#    volumes:
+#      - ./apps:/opt/spark/work-dir
+#      - ./data:/opt/spark/data
+#    environment:
+#      - SPARK_NO_DAEMONIZE=true
+#
+#    networks:
+#        - data-net
+#
+#
+#  worker.1:
+#    image: ${COMPOSE_PROJECT_NAME}-spark
+#    container_name: ${COMPOSE_PROJECT_NAME}.worker.1
+#    volumes:
+#      - ./apps:/opt/spark/work-dir
+#      - ./data:/opt/spark/data
+#    depends_on:
+#      - master
+#    environment:
+#      - SPARK_NO_DAEMONIZE=true
+#      - "SPARK_MASTER_HOST=master"
+#    command: sbin/start-worker.sh
+#    networks:
+#      - data-net
