add pytest and pytest runner

--- a/containers/spark/Dockerfile
+++ b/containers/spark/Dockerfile
@@ -7,6 +7,7 @@ USER root
 RUN pip install pandas
 RUN pip install Cerberus
 RUN pip install pyarrow
+RUN pip install pytest
 
 # make spark user UID match WSL user for permssions ease.
 RUN usermod -u 1000 spark
