--- a/containers/spark/Dockerfile
+++ b/containers/spark/Dockerfile
@@ -8,6 +8,7 @@ RUN pip install pandas
 RUN pip install Cerberus
 RUN pip install pyarrow
 RUN pip install pytest
+RUN pip install coverage
 
 # make spark user UID match WSL user for permssions ease.
 RUN usermod -u 1000 spark
